k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: scp-service
spec:
  type: ClusterIP
  selector:
    app: scp-app
  ports:
    - port: 8080
      targetPort: 8080
